# dot-prediction

./: .gitignore  .gitmodules  CLAUDE.md  Snakefile  Snakefile_eyetrack  config.local.example.yaml  config.yaml  config_eyetrack.local.example.yaml  config_eyetrack.yaml  jupytext.toml  pyproject.toml
.superset/: config.json  launch.sh  setup.sh
notebooks/: 00 erps.ipynb  01 patterns.ipynb  align_behavior.py  align_video.py  compare_branches.py  detect_photodiode_edges.py  erps.py  extract_gaze_fixations.py  homography_eval.py  iterative_homography_eval.py  label_homography_correspondences.py  local_star_eval.py  patterns.py  phase1c_eval.py  prediction_error.py  scout_anchor_position.py  scout_corner_glare.py  star_detection_eval.py  trajectory_and_annotation_frames.py
scripts/: build_screen_template.py  debug_screen_detection.py  debug_smooth_detection.py  detect_photodiode_edges.py  detect_screen_corners.py  epoch_ecog.py  extract_photodiode.py  feasibility_ecc.py  preflight_erode_fix.py  preflight_phase1c.py  render_eyetrack_overlay.py
specs/: high-level-science.md  homography-solver.md  phase-1b-small-star-detection.md  phase-1c-iterative-homography-refinement.md  phase1c-big-star-anchor.md  phase1c-box-corner-detector.md  phase2-gaze-extraction.md
src/: big_star_detector.py  box_corner_detector.py  corner_smoother.py  ecog.py  gaze_projection.py  homography_refinement.py  homography_solver.py  local_star_detector.py  neuralynx_to_mne.py  photodiode.py  predicted_positions.py  schemas.py  screen_detection.py  star_detector.py  star_matcher.py  viz.py
(+20 files in other folders)
