[project]
name = "dot-prediction"
version = "0.1.0"
description = "Dot-prediction ECoG analysis pipeline"
authors = [{ name = "Jon Gauthier", email = "jon@gauthiers.net" }]
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mne>=1.12.0",
    "neo>=0.14.4",
    "nibabel>=5.4.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandera>=0.21.0",
    "ploomber-engine>=0.0.33",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "snakemake>=9.19.0",
    "tqdm>=4.67.3",
]
